--- a/web.css
+++ b/web.css
@@ -162,16 +162,19 @@ ul li a:hover{
     font-size: 60px;
 }
 
-.form{
-    width: 250px;
-    height: 380px;
+.form {
+    width: 90%;
+    max-width: 300px;
+    height: auto;
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
     position: absolute;
-    top: -20px;
-    left: 870px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
     padding: 25px;
 }
+
 
 .form h2{
     width: 220px;
